--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,34 @@
 {
-  "name": "ippanelcom/laravel-sdk",
-  "description": "Laravel SDK for IPPanel SMS API",
-  "version": "1.0.5",
+  "name": "or81/ippanel-sms",
+  "description": "Laravel SMS package based on IPPanel (custom fork)",
   "type": "library",
   "license": "MIT",
   "authors": [
     {
-      "name": "IPPanel",
-      "email": "devops@ippanel.com"
+      "name": "Omid Rajabi",
+      "email": "your-email@example.com"
     }
   ],
   "require": {
     "php": "^7.4|^8.0",
+    "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
     "guzzlehttp/guzzle": "^7.0"
   },
   "autoload": {
     "psr-4": {
-      "Ippanel\\": "src/IPPanel/"
+      "OR81\\Ippanel\\": "src/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Ippanel\\IppanelServiceProvider"
+        "OR81\\Ippanel\\IppanelServiceProvider"
       ],
       "aliases": {
-        "IPPanel": "Ippanel\\Facades\\IPPanel"
+        "IPPanel": "OR81\\Ippanel\\Facades\\IPPanel"
       }
     }
   },
-  "keywords": [
-    "laravel",
-    "sms",
-    "ippanel",
-    "notification"
-  ],
-  "homepage": "https://github.com/ippanelcom/laravel-sdk",
-  "minimum-stability": "stable"
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
